deployment/base/sampleapp/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: caddy-service
spec:
  selector:
    app: caddy
  ports:
    - name: http
      port: 80
